# llamaplay

./: .gitmodules  Cargo.toml  README.md
llama-cpp/: Cargo.toml  build.rs
llama-cpp/src/: lib.rs
llama-cpp/src/llama/: mod.rs
llamaplay/: Cargo.toml
llamaplay/src/: main.rs
