[package]
name = "llamaplay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
hf-hub = "0.3.2"
llama-cpp = { path = "../llama-cpp" }
tracing-subscriber = {version="0.3.18", features=["env-filter"]}
